added the second  and third blog

--- a/index.html
+++ b/index.html
@@ -12,5 +12,13 @@
     <h1>my first website</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem at quam ipsam id dolore aliquam aperiam pariatur repellendus inventore assumenda iure, officia, voluptatibus quod excepturi molestiae accusantium similique ullam corrupti.</p>
    </div>
+   <div>
+    <h1>my second website</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem at quam ipsam id dolore aliquam aperiam pariatur repellendus inventore assumenda iure, officia, voluptatibus quod excepturi molestiae accusantium similique ullam corrupti.</p>
+   </div>
+   <div>
+    <h1>my third website</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem at quam ipsam id dolore aliquam aperiam pariatur repellendus inventore assumenda iure, officia, voluptatibus quod excepturi molestiae accusantium similique ullam corrupti.</p>
+   </div>
 </body>
 </html>
