--- a/index.html
+++ b/index.html
@@ -20,5 +20,14 @@
     <h1>my third website</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem at quam ipsam id dolore aliquam aperiam pariatur repellendus inventore assumenda iure, officia, voluptatibus quod excepturi molestiae accusantium similique ullam corrupti.</p>
    </div>
+   
+   <div>
+    <h1>how to push incremental code</h1>
+    <ul>
+        <li>git add .</li>
+        <li>git commit -m"added the meaningful commit message"</li>
+        <li>git push</li>
+    </ul>
+   </div>
 </body>
 </html>
