added the image to push code

--- a/index.html
+++ b/index.html
@@ -29,5 +29,9 @@
         <li>git push</li>
     </ul>
    </div>
+   <div>
+    <h3>alamin is a best boy</h3>
+    <img src="alamin.jpg" alt="alamin">
+   </div>
 </body>
 </html>
